--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li>User/Project#Num: <a href="https://github.com/mojombo/god/issues/1" class="issue-link" title="The server is not available (or you do not have permissions to access it)">mojombo/god#1</a></li>
         </ul>
 
-        <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
+        <p> Hi My name is Jayati Sharma
 
         <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p>
 
